# email-validator

./: README.md  database.py  email_validator.db  index.html  main.py  pyproject.toml  requirements.txt  test_emails.csv
.github/workflows/: performance-analysis.yml  runner-init-617.yml
